# polymoney

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  STRATEGIES.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
bot/: alerts.py  telegram_bot.py
dashboard/: README.md  next.config.js  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
execution/: order_manager.py  polymarket_client.py
ingestion/: news.py  onchain.py  polymarket.py  prices_history.py  reddit.py  scheduler.py  twitter.py
reflection/: adapter.py  config.py  confluence.py  drawdown_trigger.py  orchestrator.py  retrospective.py  scoring_loop.py  source_scorer.py  strategy_scorer.py
risk/: circuit_breaker.py  kelly.py  position_sizing.py
scripts/: backtest_anomaly_hunter.py  backtest_compound.py  backtest_confluence.py  backtest_convergence.py  backtest_portfolio.py  backtest_smart_flow.py  backtest_smart_flow_v2.py  backtest_whale_copy.py  deploy-vps.sh  init_db.py  setup.sh
shared/: api.py  config.py  db.py  logging.py  models.py
signals/: anomaly.py  llm_analyst.py  matching.py
strategy/: backtest.py  base.py  llm_conviction.py  news_arbitrage.py  smart_flow.py  smart_whale.py  whale_copy.py
